--- a/NFA/NFA/NFA/Views/MainPage.xaml
+++ b/NFA/NFA/NFA/Views/MainPage.xaml
@@ -9,7 +9,7 @@
 
     <TabbedPage.Children>
 
-        <NavigationPage Title="Dashboard">
+        <NavigationPage Title="Dashboard" >
             <x:Arguments>
                 <views:AppDashboardPage />
             </x:Arguments>
@@ -21,9 +21,9 @@
 
         </NavigationPage>
 
-        <!--<NavigationPage Title="Browse">
+        <NavigationPage Title="Login">
             <x:Arguments>
-                <views:ItemsPage />
+                <views:AppLoginPage />
             </x:Arguments>
             <NavigationPage.Icon>
                 <OnPlatform x:TypeArguments="FileImageSource">
@@ -31,7 +31,7 @@
                 </OnPlatform>
             </NavigationPage.Icon>
 
-        </NavigationPage>-->
+        </NavigationPage>
 
         <NavigationPage Title="Profile">
             <x:Arguments>
