--- a/NFA/NFA/NFA/Views/AppProfilePage.xaml
+++ b/NFA/NFA/NFA/Views/AppProfilePage.xaml
@@ -16,7 +16,7 @@
         </ResourceDictionary>
     </ContentPage.Resources>
     <StackLayout>
-        <ScrollView BackgroundColor="Yellow">
+        <ScrollView BackgroundColor="White">
             <StackLayout>
 
                 <Frame>
