--- a/NFA/NFA/NFA/Views/AppScannedOrder.xaml
+++ b/NFA/NFA/NFA/Views/AppScannedOrder.xaml
@@ -18,7 +18,7 @@
         </ResourceDictionary>
     </ContentPage.Resources>
     <StackLayout>
-    <ScrollView BackgroundColor="Yellow">
+    <ScrollView BackgroundColor="White">
         <StackLayout>
 
             <Frame>
