--- a/NFA/NFA/NFA/Views/MainPage.xaml
+++ b/NFA/NFA/NFA/Views/MainPage.xaml
@@ -6,7 +6,8 @@
             mc:Ignorable="d"
             xmlns:views="clr-namespace:NFA.Views"
             x:Class="NFA.Views.MainPage"
-            SelectedTabColor="Green">
+            SelectedTabColor="White"
+            BackgroundColor="Green">
 
     <TabbedPage.Children>
 
