--- a/NFA/NFA/NFA/Views/MainPage.xaml
+++ b/NFA/NFA/NFA/Views/MainPage.xaml
@@ -7,11 +7,11 @@
             xmlns:views="clr-namespace:NFA.Views"
             x:Class="NFA.Views.MainPage"
             SelectedTabColor="White"
-            BackgroundColor="Green">
+            BarBackgroundColor="DodgerBlue">
 
     <TabbedPage.Children>
 
-        <NavigationPage Title="Dashboard" x:Name="NP_Dashboard" IsEnabled="False">
+        <NavigationPage Title="Dashboard" x:Name="NP_Dashboard" IsEnabled="False" BarBackgroundColor="DodgerBlue">
             <x:Arguments>
                 <views:AppDashboardPage />
             </x:Arguments>
@@ -23,19 +23,7 @@
 
         </NavigationPage>
 
-        <NavigationPage Title="Login" x:Name="NP_Login" IsEnabled="True">
-            <x:Arguments>
-                <views:AppLoginPage />
-            </x:Arguments>
-            <NavigationPage.Icon>
-                <OnPlatform x:TypeArguments="FileImageSource">
-                    <On Platform="iOS" Value="tab_feed.png"/>
-                </OnPlatform>
-            </NavigationPage.Icon>
-
-        </NavigationPage>
-
-        <NavigationPage Title="Profile" x:Name="NP_Profile" >
+        <NavigationPage Title="Profile" x:Name="NP_Profile" BarBackgroundColor="DodgerBlue" >
             <x:Arguments>
                 <views:AppProfilePage x:Name="NP_ProfileVM"/>
             </x:Arguments>
